chore: cleanup of deprecated java APIs