@@ -378,9 +378,9 @@ public abstract class ORecordSerializerStringAbstract implements ORecordSerializ
     if (dou <= Float.MAX_VALUE
         && dou >= Float.MIN_VALUE
         && Double.toString(dou).equals(Float.toString((float) dou))
-        && new Double(new Double(dou).floatValue()).doubleValue() == dou) {
+        && Double.valueOf(Double.valueOf(dou).floatValue()).doubleValue() == dou) {
       return OType.FLOAT;
-    } else if (!new Double(dou).toString().equals(iValue)) {
+    } else if (!Double.valueOf(dou).toString().equals(iValue)) {
       return OType.DECIMAL;
     }
 
@@ -466,13 +466,13 @@ public abstract class ORecordSerializerStringAbstract implements ORecordSerializ
 
             final String v = iValue.substring(0, index);
 
-            if (c == 'f') return new Float(v);
+            if (c == 'f') return Float.valueOf(v);
             else if (c == 'c') return new BigDecimal(v);
-            else if (c == 'l') return new Long(v);
-            else if (c == 'd') return new Double(v);
-            else if (c == 'b') return new Byte(v);
+            else if (c == 'l') return Long.valueOf(v);
+            else if (c == 'd') return Double.valueOf(v);
+            else if (c == 'b') return Byte.valueOf(v);
             else if (c == 'a' || c == 't') return new Date(Long.parseLong(v));
-            else if (c == 's') return new Short(v);
+            else if (c == 's') return Short.valueOf(v);
           }
           return iValue;
         }
@@ -484,13 +484,13 @@ public abstract class ORecordSerializerStringAbstract implements ORecordSerializ
 
     if (integer) {
       try {
-        return new Integer(iValue);
+        return Integer.valueOf(iValue);
       } catch (NumberFormatException ignore) {
-        return new Long(iValue);
+        return Long.valueOf(iValue);
       }
     } else if ("NaN".equals(iValue) || "Infinity".equals(iValue))
       // NaN and Infinity CANNOT BE MANAGED BY BIG-DECIMAL TYPE
-      return new Double(iValue);
+      return Double.valueOf(iValue);
     else return new BigDecimal(iValue);
   }
 
@@ -505,7 +505,7 @@ public abstract class ORecordSerializerStringAbstract implements ORecordSerializ
 
       case INTEGER:
         if (iValue instanceof Integer) return iValue;
-        return new Integer(iValue.toString());
+        return Integer.valueOf(iValue.toString());
 
       case BOOLEAN:
         if (iValue instanceof Boolean) return iValue;
