@@ -619,7 +619,7 @@ public class ODocumentFieldConversionTest extends BaseMemoryInternalDatabase {
       assertTrue(val instanceof Float);
     }
     for (int i = 1; i < 7; i++) {
-      assertTrue(set.contains(new Float(i)));
+      assertTrue(set.contains(Float.valueOf(i)));
     }
   }
 
@@ -660,7 +660,7 @@ public class ODocumentFieldConversionTest extends BaseMemoryInternalDatabase {
       assertTrue(val instanceof Double);
     }
     for (int i = 1; i < 7; i++) {
-      assertTrue(set.contains(new Double(i)));
+      assertTrue(set.contains(Double.valueOf(i)));
     }
   }
 
