@@ -102,9 +102,9 @@ public class OSQLMethodAsListTest {
     // The expected behavior is to return a list with only the single
     // element in it.
 
-    Object result = function.execute(null, null, null, new Integer(4), null);
+    Object result = function.execute(null, null, null, Integer.valueOf(4), null);
     ArrayList<Object> expected = new ArrayList<Object>();
-    expected.add(new Integer(4));
+    expected.add(Integer.valueOf(4));
     assertEquals(result, expected);
   }
 }
