@@ -65,8 +65,8 @@ public class TwoClientsRecordUpdateDuringRetryWithTransactionsOnMultipleServersS
   @Test
   @Ignore
   public void test() throws Exception {
-    OGlobalConfiguration.DISTRIBUTED_CONCURRENT_TX_AUTORETRY_DELAY.setValue(new Integer(2000));
-    OGlobalConfiguration.DISTRIBUTED_CONCURRENT_TX_MAX_AUTORETRY.setValue(new Integer(1));
+    OGlobalConfiguration.DISTRIBUTED_CONCURRENT_TX_AUTORETRY_DELAY.setValue(Integer.valueOf(2000));
+    OGlobalConfiguration.DISTRIBUTED_CONCURRENT_TX_MAX_AUTORETRY.setValue(Integer.valueOf(1));
     maxRetries = 10;
     init(2);
     prepare(false);
