@@ -97,7 +97,7 @@ public class OGraphImporterBasicAPITest {
         }
 
         Map<String, Object> properties = new HashMap<String, Object>();
-        properties.put("score", new Float(parts[2]).intValue());
+        properties.put("score", Float.valueOf(parts[2]).intValue());
         properties.put("date", Long.parseLong(parts[3]));
 
         final OrientVertex v1;
