@@ -29,11 +29,11 @@ public class StringSerializationSpeedTest extends SpeedTestMonoThread {
   @Test(enabled = false)
   public void cycle() throws IOException {
     StringBuilder buffer = new StringBuilder();
-    buffer.append(new Integer(300).toString());
+    buffer.append(Integer.valueOf(300).toString());
     buffer.append(new Boolean(true).toString());
     buffer.append("Questa e una prova di scrittura di una stringa");
-    buffer.append(new Float(3.0f).toString());
-    buffer.append(new Long(30000000L).toString());
+    buffer.append(Float.valueOf(3.0f).toString());
+    buffer.append(Long.valueOf(30000000L).toString());
 
     buffer.toString().getBytes();
   }
